# gpgpu

./: README.md
final-exercises/LavaFlow/: CMakeLists.txt  Lava  Makefile  lava_flows.cpp
final-exercises/LavaFlow/header/: camera.h  mesh.h  model.h  surface.h
final-exercises/LavaFlow/shaders/: lava.frag  lava.vert
final-exercises/Particles/: CMakeCache.txt  CMakeLists.txt  Makefile  Particles  Particles.cbp  cmake_install.cmake  particles.cpp
final-exercises/Particles/header/: Particle.h  Shader.h  camera.h  lamp.h  mesh.h  model.h
final-exercises/Particles/models/: sphere.mtl
final-exercises/Particles/shaders/: fragment_shader_spheres.frag  vertex_shader.vert  vertex_shader_sphere.vert
final-exercises/fps/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  floor  floor.cbp  floor.cpp
final-exercises/fps/include/: camera.h  mesh.h  model.h  shader.h  texture.h
final-exercises/fps/shaders/: cube_fragment.frag  cube_vertex.vert  floor_fragment.frag  floor_vertex.vert  light_fragment.frag  sphere_fragment.frag  sphere_vertex.vert
final-exercises/particle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  particle  particle.cbp  particle.cpp
final-exercises/particle/include/: camera.h  mesh.h  model.h  shader.h
final-exercises/particle/shaders/: fragment_shader_little.frag  fragment_shader_sphere.frag  fragment_shader_wired.frag  vertex_shader.vert  vertex_shader_sphere.vert
simple/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  glad.c  simple  simple.cpp
